--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -421,7 +421,7 @@
                         <label>Status: &nbsp;</label>
                         <select class="form-control" id="status-dropdown">
                             <option value="0">Pending</option>
-                            <option value="1">New</option>
+                            <option value="1">Open</option>
                             <option value="2">Assigned</option>
                             <option value="3">Solved</option>
                             <option value="4">Unapproved</option>
