--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -99,7 +99,7 @@
                 <div class="col-sm-2">
                     <select class="form-control" id="filter-status">
                         <option selected value="All">-- All status --</option>
-                        <option value="New">New</option>
+                        <option value="Open">Open</option>
                         <option value="Assigned">Assigned</option>
                         <option value="Solved">Solved</option>
                         <option value="Unapproved">Unapproved</option>
