--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -130,7 +130,17 @@
                         <div class="col-sm-4 labels">
                             <b>Status:  </b>
                         </div>
-                        <div class="col-sm-8">@Html.DisplayFor(model => model.Status)</div>
+                        <div class="col-sm-8">
+                            @switch (Model.Status)
+                            {
+                                case "Open": <label class="label label-info">Open</label> break;
+                                case "Assigned": <label class="label label-warning">Assigned</label> break;
+                                case "Solved": <label class="label label-success">Solved</label> break;
+                                case "Unapproved": <label class="label label-danger">Unapproved</label> break;
+                                case "Cancelled": <label class="label label-violet">Cancelled</label> break;
+                                case "Closed": <label class="label label-default">Closed</label> break;
+                            }
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-12 row-content">
