--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -496,29 +496,12 @@
                     window.location.href = "/HelpDesk/ManageTicket";
                 });
 
-        $('#descriptionFiles').bind('change', function () {
-
-            //converts the file size from bytes to MB
-            var fileSize = (this.files[0].size / 1024 / 1024).toFixed(2);
-
-            //gets the full file name including the extension
-            var fileName = this.files[0].name;
-
-            //finds where the extension starts
-            var dotPosition = fileName.lastIndexOf(".");
-
-            //gets only the extension
-            var fileExt = fileName.substring(dotPosition);
-
-            alert(fileSize + " MB");
-
-
-        });
-
         //$('#descriptionFiles').addEventListener('change', handleFileSelect, false);
 
-
         $("[data-role=btn-submit-new-ticket]").on("click", function () {
+            if (!checkUploadFile()) {
+                return;
+            }
             $("[data-role=btn-submit-new-ticket]").prop("disabled", true);
             $("[data-role=btn-cancel]").prop("disabled", true);
             var formData = new FormData($('#form-new-ticket')[0]);
