Fix layout and filter function

--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TMS.Models.BusinessRule
 @{
     Layout = "~/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml";
-    ViewBag.Title = "BUSINESS RULES";
+    ViewBag.Title = "Business Rules";
 }
 
 <style>
@@ -108,7 +108,7 @@
 
         $(document)
             .ready(function () {
-                setActiveTicketMenu();
+                //setActiveTicketMenu();
                 initRulesTable();
             });
     </script>
