--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -26,6 +26,7 @@
 
     .ticket_filter label {
         font-weight: normal;
+        margin-bottom: 0px;
     }
 
     .ticket_filter .select2-container--default .select2-selection--multiple .select2-selection__choice {
@@ -33,10 +34,19 @@
         border: none;
     }
 
-    .ticket_filter  .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    .ticket_filter .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
         color: #f7f5f5;
     }
 
+    .requester-name {
+        margin-bottom: 0px;
+    }
+
+    .requester-email {
+        margin-bottom: 0px;
+        font-weight: normal;
+        white-space: nowrap;
+    }
 </style>
 
 @section SidebarMenu {
@@ -458,7 +468,7 @@
                 </div>
                 <div class="filter_time_period hidden" data-role="filter_time_period">
                     <h5>Time period</h5>
-                    <input type="text" readonly="readonly" data-role="filter_time_period_input"/>
+                    <input type="text" readonly="readonly" data-role="filter_time_period_input" />
                 </div>
                 <div class="filter_due_by" data-role="filter_due_by">
                     <h5>Due by</h5>
@@ -504,7 +514,7 @@
                 </div>
                 <div class="filter_requester" data-role="filter_requester">
                     <h5>Requester</h5>
-                    <select multiple="multiple" data-role="filter_mode_select"></select>
+                    <select multiple="multiple" style="width: 250px;" data-role="filter_requester_select"></select>
                 </div>
             </div>
         </div>
@@ -519,21 +529,21 @@
                     <i class="fa fa-compress" aria-hidden="true"></i> Merge
                 </a>
                 @*<div class="pull-right" style="margin-right: 20px">
-                    <div class="form-inline form-group">
-                        <label>Status: &nbsp;</label>
-                        <select class="form-control" id="status-dropdown">
-                            <option value="0">Pending</option>
-                            <option value="1">Open</option>
-                            <option value="2">Assigned</option>
-                            <option value="3">Solved</option>
-                            <option value="4">Unapproved</option>
-                            <option value="5">Cancelled</option>
-                            <option value="6">Closed</option>
-                        </select>&nbsp;&nbsp; &nbsp;
-                        <label>Search: &nbsp;</label>
-                        <input class="form-control" type="text" id="search-txt" placeholder="Subject" />
-                    </div>
-                </div>*@
+                        <div class="form-inline form-group">
+                            <label>Status: &nbsp;</label>
+                            <select class="form-control" id="status-dropdown">
+                                <option value="0">Pending</option>
+                                <option value="1">Open</option>
+                                <option value="2">Assigned</option>
+                                <option value="3">Solved</option>
+                                <option value="4">Unapproved</option>
+                                <option value="5">Cancelled</option>
+                                <option value="6">Closed</option>
+                            </select>&nbsp;&nbsp; &nbsp;
+                            <label>Search: &nbsp;</label>
+                            <input class="form-control" type="text" id="search-txt" placeholder="Subject" />
+                        </div>
+                    </div>*@
                 <table class="table" id="ticket-table">
                     <thead>
                         <tr>
